public/styles/jobs.css
.flex-wrap {
    flex-wrap: wrap;
}

.width-100 {
    width: 100%;
}

section.jobs-header {
    padding-top: 3rem;
    /* padding-bottom: 5rem; */
}

@media screen and (max-width: 768px) {
    section.jobs-header {
        padding-top: 1rem;
        /* padding-bottom: 2rem; */
    }
}

.jobs h1,
.jobs h4 {
    text-align: center;
}

.jobs h4 {
    color: var(--primary-gray);
}

.sca-btn-small {
    width: auto;
}

.jobs .__shecodeheader_title h1 {
    font-size: 45px;
}

.jobs .sca-btn-small {
    box-shadow: 0px 3px 6px #00000029;
}

.jobs .__shecodeheader_subtitle h4 {
    font-size: 16px;
    margin-top: 10px;
}

.jobs .__shecodeheader_text {
    display: flex;
    flex-direction: column;
    align-items: center;
}

@media screen and (max-width: 424px) {
    .jobs .__shecodeheader_text {
        margin-bottom: 50px;
    }
    .__jobs_preview .col-xs-12 {
        padding: 0;
    }
}

@media screen and (max-width: 768px) {
    .jobs .__shecodeheader_text h4 {
        margin-bottom: 0 !important;
    }
    .jobs .__shecodeheader_subtitle {
        margin-bottom: 20px;
    }
}

.container.width-100 {
    padding-top: 5rem;
}

.job-type-header {
    padding-bottom: 25px;
}

.__jobs_preview_card {
    /* width: 40%; */
    min-height: 330px;
    background: #FFFFFF 0% 0% no-repeat padding-box;
    border: 1px solid #DCDCDC;
    border-radius: 0px 0px 70px 0px;
    opacity: 1;
    padding: 25px 28px;
    margin-bottom: 30px;
    display: flex;
    flex-direction: column;
    color: var(--primary-gray);
}

.__jobs_preview_card p {
    margin: 0 0 15px;
}

.__jobs_preview_card button {
    /* width: 130px; */
    align-self: flex-end;
    /* margin-top: 18%; */
    position: absolute;
    bottom: 21%;
}

.__jobs_preview_card .org {
    font-size: 16px;
}

.__jobs_preview_card .posted-time {
    font-size: 12px;
}



.job-view-more {
    padding: 0 !important;
}

/* .modal-dialog {
    width: 50vw;
} */

/* .job-view-more.modal.in {
    display: flex !important;
    align-items: center;
    justify-content: center;
} */

.job-view-more .modal-body {
    /* min-height: 70vh; */
    max-height: 50vh;
}

@media screen and (min-width: 850px) {
    .job-view-more .modal-body {
        padding: 40px 40px 0;
    }
}

.job-view-more .modal-content {
    overflow-y: scroll;
}

.job-view-more .title {
    color: var(--primary-black);
}

.role-apply {
    display: flex;
    justify-content: flex-end;
    flex-wrap: wrap;
    padding-left: 0;
    padding-right: 0;
}

.apply {
    display: flex;
    /* flex-wrap: wrap; */
    /* align-self: center; */
}

.apply button {
    margin-top: 0;
    padding: 10px 25px;
}

.role-desc {
    margin-top: 2rem;
    color: var(--primary-gray);
}

.jobtype {}

.level {
    grid-area: level;
}

.industry {
    grid-area: industry;
}

.employment-type {
    grid-area: employment-type;
}

.salary-range {
    grid-area: salary-range;
}

.grid-container {
    display: grid;
    grid-template-columns: 50% 50%;
    grid-template-rows: auto 25% auto;
    grid-template-areas: "level industry" ". ." "employment-type salary-range";
}

div.grid-container:nth-last-child(1),
div.grid-container:nth-last-child(2) {
    margin-bottom: 70px;
}

.__jobdeets_header {
    color: var(--primary-black);
    font-weight: bolder;
    margin-bottom: 5px;
}

.__jobdeets_body {
    color: var(--primary-gray);
    margin-bottom: 5px;
}

.margin-top-3r {
    margin-top: 3rem;
}

.margin-top-2r {
    margin-top: 2rem;
}

.job-status {
    display: inline-block;
    padding: 10px 25px;
    background-color: #DCDCDC;
    margin-right: 20px;
}


/* JOBS REGISTER */

section.__register_welcome .flex-center {
    position: relative;
}

section.__register_welcome .flex-center .close {
    position: absolute;
    top: -53px;
    right: 0;
    font-size: 4rem;
}

.__register_welcome_text {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 0 10px;
}

.first_ring {
    position: relative;
    width: 20px;
    height: 20px;
    border-radius: 50%;
}

.org-details .first_ring {
    border: 6px solid var(--primary-main-pink);
}

.contact-details .first_ring {
    background: var(--primary-main-pink);
}

.first_ring:after {
    content: "Organization Details";
    display: block;
    position: absolute;
    top: 22px;
    margin-left: -40px;
    color: var(--primary-main-pink);
}

.connector {
    width: 265px;
    margin-top: 8px;
    margin-bottom: 8px;
}

.org-details .connector {
    border: 2px solid #E5E5E5;
}

.contact-details .connector {
    border: 2px solid var(--primary-main-pink);
}

.second_ring {
    position: relative;
    width: 20px;
    height: 20px;
    border-radius: 50%;
}

.org-details .second_ring {
    background: #E5E5E5;
}

.contact-details .second_ring {
    border: 6px solid var(--primary-main-pink);
}

.second_ring:after {
    content: "Contact Details";
    display: block;
    position: absolute;
    top: 22px;
    margin-left: -20px;
}

.org-details .second_ring:after {
    color: #E5E5E5;
}

.contact-details .second_ring:after {
    color: var(--primary-main-pink);
}

.welcome_text h2 {
    font-weight: bold;
    letter-spacing: 0.96px;
    color: #1A1A1A;
}

.welcome_text p {
    font-size: 16px;
    color: #1A1A1A;
}

.here {
    display: flex;
    justify-content: center;
    padding-top: 35px;
}

@media screen and (max-width: 425px) {
    .here {
        width: 70% !important;
    }
    .first_ring {
        border: 5px solid var(--primary-main-pink);
        width: 17px;
        height: 17px;
    }
    .second_ring {
        border: 5px solid #E5E5E5;
        width: 17px;
        height: 17px;
    }
    .connector {
        margin-top: 6px;
    }
    .modal-dialog {
        width: 100vw;
    }
}

@media screen and (max-width: 375px) {
    .first_ring,
    .second_ring {
        width: 19px;
    }
}

.__register {
    width: 33%;
    height: 100%;
    margin: 5rem auto;
}

.__register_form form {
    flex-direction: column;
}

.__register_form .form-control {
    width: 31vw;
    height: 45px;
}

.__register_form input,
.__register_form select,
.__register_form textarea {
    background-color: #F0F0F0;
    border: 0;
}

.__register_welcome {
    margin-bottom: 5rem;
}

.__register_form option:disabled {
    color: gray;
}

@media screen and (max-width: 768px) {
    .container {
        padding: 0;
    }
}

@media screen and (max-width: 425px) {
    .__register,
    .__register_form .form-control {
        width: 90vw;
    }
}

@media screen and (min-width: 426px) and (max-width: 768px) {
    .__register,
    .__register_form .form-control {
        width: 61vw;
    }
}

.__register_form a {
    font-weight: bold;
}

.__register_form>p {
    padding-top: 20px;
}

.__register_form>p a {
    color: var(--primary-main-pink);
}

.__contact_number {
    width: 100%;
    display: flex;
}

div.__contact_number>.dailing-code {
    width: 30%;
    margin-right: 10px;
}

@media screen and (max-width: 320px) and (max-width: 768px) {
    div.__contact_number>.dailing-code {
        width: 42%;
    }
}

.form-group .job-desc {
    height: auto;
}

.__jobdetails textarea {
    padding: 17px 12px;
}

p.post-a-job-cta {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.__register_form input::placeholder,
.__register_form input::-webkit-datetime-edit-fields-wrapper,
.__register_form textarea::placeholder,
select:invalid,
select option[value=""] {
    font-family: Roboto, sans-serif;
    color: #1A1A1A8A;
}

.__register_form select {
    -webkit-appearance: none;
    -moz-appearance: none;
    background-image: url("data:image/svg+xml;utf8,<svg fill='gray' height='24' viewBox='0 0 24 24' width='24' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
    background-repeat: no-repeat;
    background-position: top 10px right 5px;
}

.jobsDropdownMenuContainer {
    display: flex;
    justify-content: flex-end;
    padding: 15px 50px 0;
}

.jobsDropdownMenuContainer.open > .dropdown-menu-right {
    margin-right: 50px;
}

.jobsDropdownMenuContainer.open .dropdown-menu > li > a {
    padding: 7px 20px;
}

.rounded-img {
    border: 1px solid black;
    border-radius: 50%;
    padding: 3px;
}

.avatar-greeting {
    padding: 4px 20px 0px;
}

